--- a/DLTE-java/DLTE-Task/550/pom.xml
+++ b/DLTE-java/DLTE-Task/550/pom.xml
@@ -5,10 +5,10 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.example</groupId>
-  <artifactId>\DLTE-Java-007</artifactId>
+  <artifactId>550</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>\DLTE-Java-007</name>
+  <name>550</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
