--- a/DLTE-JavaEE/Java-Task/833-WebSIPCalculatorandTaxslab/pom.xml
+++ b/DLTE-JavaEE/Java-Task/833-WebSIPCalculatorandTaxslab/pom.xml
@@ -9,7 +9,7 @@
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
 
-  <name>833-Web SIP Calculator and Tax slab Maven Webapp</name>
+  <name>833-Web-SIP-Calculator-and-Tax-slab-Maven-Webapp</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
@@ -48,7 +48,7 @@
   </dependencies>
 
   <build>
-    <finalName>833-Web SIP Calculator and Tax slab</finalName>
+    <finalName>833-WebSIPCalculatorandTaxslab</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <plugin>
