--- a/DLTE-JavaEE/Java-Task/861-Rest Get mapping of Transactions/pom.xml
+++ b/DLTE-JavaEE/Java-Task/861-Rest Get mapping of Transactions/pom.xml
@@ -52,6 +52,13 @@
       <version>2.10.1</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+    <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>4.5.1</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
