--- a/DLTE-JavaEE/Java-Task/862-RestfulWebservice/pom.xml
+++ b/DLTE-JavaEE/Java-Task/862-RestfulWebservice/pom.xml
@@ -26,11 +26,6 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
-    <dependency>
-      <groupId>org.example</groupId>
-      <artifactId>ConsoleAppNew</artifactId>
-      <version>1.0-SNAPSHOT</version>
-    </dependency>
     <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
     <dependency>
       <groupId>javax.servlet</groupId>
@@ -50,6 +45,18 @@
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
       <version>2.10.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.example</groupId>
+      <artifactId>ConsoleAppNew</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>4.5.1</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
