--- a/DLTE-Spring/Task/1088-SpringBootJPAHQL&SQL/src/main/resources/application.properties
+++ b/DLTE-Spring/Task/1088-SpringBootJPAHQL&SQL/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=demo
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.username=First
+spring.datasource.password=First
+
+spring.jpa.properties.hibernate.show_sql=true
+
+spring.jpa.hibernate.ddl-auto=update
+
+server.port=1100
