--- a/DLTE-Spring/Task/1098-SpringBootJDBC/pom.xml
+++ b/DLTE-Spring/Task/1098-SpringBootJDBC/pom.xml
@@ -39,6 +39,14 @@
             <version>11.2.0.4</version>
             <scope>runtime</scope>
         </dependency>
+        <!--
+        https://mvnrepository.com/artifact/org.mockito/mockito-core
+        -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>4.5.1</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-tomcat</artifactId>
