--- a/DLTE-JavaEE/Java-Task/898-BuildingSOAPwebservice/pom.xml
+++ b/DLTE-JavaEE/Java-Task/898-BuildingSOAPwebservice/pom.xml
@@ -25,6 +25,20 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>4.5.1</version>
+      <scope>test</scope>
+    </dependency>
+
+      <dependency>
+        <groupId>org.example</groupId>
+        <artifactId>ConsoleAppNew</artifactId>
+        <version>1.0-SNAPSHOT</version>
+      </dependency>
+
   </dependencies>
 
   <build>
@@ -71,5 +85,15 @@
         </plugin>
       </plugins>
     </pluginManagement>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>8</source>
+          <target>8</target>
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
 </project>
