--- a/DLTE-Spring/Task/1176-JDBCTransactionSOAPWebservice/pom.xml
+++ b/DLTE-Spring/Task/1176-JDBCTransactionSOAPWebservice/pom.xml
@@ -48,10 +48,10 @@
             <version>11.2.0.4</version>
             <scope>runtime</scope>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter-security</artifactId>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-tomcat</artifactId>
