--- a/DLTE-FinalProject/mybank-debitcard-dao/src/main/resources/application.properties
+++ b/DLTE-FinalProject/mybank-debitcard-dao/src/main/resources/application.properties
@@ -3,13 +3,12 @@ spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 spring.datasource.username=First
 spring.datasource.password=First
-server.port=8888
+server.port=8222
 
 springdoc.api-docs.enabled=true
 
 #enbales the colors
 spring.output.ansi.enabled=always
-logging.level.elements.spring.explore=INFO
 
 # console pattern
 logging.pattern.console=%clr([%level]){blue} %clr(%d){red} %c %clr(%t){yellow} %clr(%m%n){green}
@@ -17,4 +16,85 @@ logging.pattern.console=%clr([%level]){blue} %clr(%d){red} %c %clr(%t){yellow} %
 # logs as file
 logging.file.name=myBankAppProject.log
 logging.pattern.file=%clr(%d){red} %clr([%level]){green} %c %t %clr(%m%n){green}
+
+#account
+account.id.null=Account Id must be valid
+account.type.null=Account Type should not be null
+account.balance.null=account balance should not be null
+account.status.null=account status should not be null
+account.num.valid=account num must be valid
+account.type.valid = Account type must be valid
+
+#customer
+customer.name.null= customer name should not be null
+customer.contact.null=customer contact should not be null
+customer.contact.invalid = customer contact must be 10 digit number
+customer.status.null=customer status should not be null
+customer.address.null= customer address should not be null
+user.name.null= username should not be null
+user.name.invalid = username must be a proper string 
+password.null = password should not be null
+
+#Debit card
+card.fetch.success=Debit card details fetched successfully
+sql.syntax.invalid=Invalid SQL syntax: {0}
+card.list.null=Debit card list is null or empty
+card.not.available=No debit cards available
+
+card.number.null=Debit card number shouldn't be  null
+card.number.invalid = card number should be 16 Digits
+account.number.null = Account number shouldn't be Null
+account.number.invalid = Account number should be 14 Digits
+customer.id.null = Customer number shouldn't be Null
+customer.id.invalid = Customer number should be Digit 
+card.cvv=Invalid CVV number
+card.cvv.null=Debit card CVV shouldn't null
+card.expiry.invalid=Invalid Expiry date
+card.expiry.null=Debit card expiry date must be mentioned
+card.domestic.invalid=Debit card Domestic Limit should be valid one
+card.international.invalid=Debit card International Limit should be valid one
+card.domestic.null=Debit card Domestic Limit shouldn't be Null
+card.international.null=Debit card International Limit shouldn't be Null
+card.pin.null =Debit Credit card pin shouldn't be Null
+card.pin.invalid = Debit Card pin should be  4 digit Number
+card.status.null=Debit card status must be provided
+card.status.invalid = status must be String provided here (active|inactive|Active|Inactive|ACTIVE|INACTIVE)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+#debit.card.number.notNull=Debit card number cannot be null
+#account.number.notNull=Account number cannot be null
+#customer.id.notNull=Customer ID cannot be null
+#cvv.notNull=CVV cannot be null
+#cvv.digits=CVV must be a numeric value with maximum 3 digits
+#pin.notNull=PIN cannot be null
+#pin.digits=PIN must be a numeric value with maximum 4 digits
+#expiry.date.notNull=Expiry date cannot be null
+#status.notNull=Status cannot be null
+#status.size=Status must be at most 10 characters long
+#status.pattern=Status must contain only alphanumeric characters
+#domestic.limit.positiveOrZero=Domestic limit must be a positive or zero value
+#international.limit.positiveOrZero=International limit must be a positive or zero value
 
