--- a/DLTE-FinalProject/mybank-debitcard-web/src/main/resources/application.properties
+++ b/DLTE-FinalProject/mybank-debitcard-web/src/main/resources/application.properties
@@ -64,4 +64,7 @@ card.pin.invalid = Debit Card pin should be  4 digit Number
 card.status.null=Debit card status must be provided
 card.status.invalid = status must be String provided here (active|inactive|Active|Inactive|ACTIVE|INACTIVE)
 
-
+#rest web service
+internal.error=internal error occurred
+activation.fail=Invalid card number or already active card
+card.active=Card activated successfully
