--- a/DLTE-FinalProject/mybank-debitcard-dao/src/main/resources/application.properties
+++ b/DLTE-FinalProject/mybank-debitcard-dao/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 spring.datasource.username=First
 spring.datasource.password=First
-server.port=8222
+server.port=8083
 
 springdoc.api-docs.enabled=true
 
@@ -16,6 +16,9 @@ logging.pattern.console=%clr([%level]){blue} %clr(%d){red} %c %clr(%t){yellow} %
 # logs as file
 logging.file.name=myBankAppProject.log
 logging.pattern.file=%clr(%d){red} %clr([%level]){green} %c %t %clr(%m%n){green}
+
+Debitcard.error=not available to retrive data.
+#card.fetch.success=Debit card details fetched successfully
 
 #account
 account.id.null=Account Id must be valid
@@ -60,7 +63,10 @@ card.pin.invalid = Debit Card pin should be  4 digit Number
 card.status.null=Debit card status must be provided
 card.status.invalid = status must be String provided here (active|inactive|Active|Inactive|ACTIVE|INACTIVE)
 
-
+#rest web service
+internal.error=internal error occurred
+activation.fail=Invalid card number or already active card
+card.active=Card activated successfully
 
 
 
