--- a/DLTE-FinalProject/mybank-debitcard-dao/src/main/resources/application.properties
+++ b/DLTE-FinalProject/mybank-debitcard-dao/src/main/resources/application.properties
@@ -65,10 +65,10 @@ card.status.invalid = status must be String provided here (active|inactive|Activ
 
 #rest web service
 internal.error=internal error occurred
-activation.fail=Invalid card number 
-card.active=Card activated successfully
+activation.fail=Invalid card number or Debit card does not exist
+card.active=Debit card activation successful
 debitCard.already.active= Debit card is already active.
-
+empty.body=Request body is empty.Please provide card details.
 
 
 
