--- a/DLTE-FinalProject/mybank-debitcard-web/src/main/resources/application.properties
+++ b/DLTE-FinalProject/mybank-debitcard-web/src/main/resources/application.properties
@@ -68,7 +68,7 @@ card.active=Card activated successfully
 activation.fail=Invalid card number or card does not exist
 internal.error=internal error occurred
 debitCard.already.active= Debit card is already active.
-
+empty.body=Request body is empty.Please provide card details.
 
 
 
