--- a/DLTE-FinalProject/mybank-debitcard-dao/src/main/resources/application.properties
+++ b/DLTE-FinalProject/mybank-debitcard-dao/src/main/resources/application.properties
@@ -70,7 +70,13 @@ card.active=Debit card activation successful
 debitCard.already.active= Debit card is already active.
 empty.body=Request body is empty.Please provide card details.
 
-
+#for security
+attempts.update=Attempts updated.
+status.changed=Status has been changed!
+credentials.invalid=Invalid credentials and attempts taken.
+attempts.taken=Attempts are taken
+account.suspend=Max Attempts reached account is suspended
+account.redeem=Account suspended contact admin to redeem!
 
 
 
