--- a/DLTE-FinalProject/mybank-debitcard-web/src/main/resources/application.properties
+++ b/DLTE-FinalProject/mybank-debitcard-web/src/main/resources/application.properties
@@ -64,11 +64,21 @@ card.status.null=Debit card status must be provided
 card.status.invalid = status must be String provided here (active|inactive|Active|Inactive|ACTIVE|INACTIVE)
 
 #rest web service
-card.active=Card activated successfully
-activation.fail=Invalid card number or card does not exist
+#card.active=Card activated successfully
+#activation.fail=Invalid card number or card does not exist
+#internal.error=internal error occurred
+#debitCard.already.active= Debit card is already active.
+#empty.body=Request body is empty.Please provide card details.
+
 internal.error=internal error occurred
-debitCard.already.active= Debit card is already active.
-empty.body=Request body is empty.Please provide card details.
-
-
-
+activation.fail=Invalid card number or Debit card does not exist
+card.active=Debit card activation successful
+debitCard.already.active= Debit card is already active
+empty.body=Request body is empty.Please provide card details
+#for security
+attempts.update=Attempts updated.
+status.changed=Status has been changed!
+credentials.invalid=Invalid credentials and attempts taken.
+attempts.taken=Attempts are taken
+account.suspend=Max Attempts reached account is suspended
+account.redeem=Account suspended contact admin to redeem!
