--- a/DLTE-FinalProject/mybank-debitcard-dao/src/main/resources/application.properties
+++ b/DLTE-FinalProject/mybank-debitcard-dao/src/main/resources/application.properties
@@ -77,8 +77,7 @@ credentials.invalid=Invalid credentials and attempts taken.
 attempts.taken=Attempts are taken
 account.suspend=Max Attempts reached account is suspended
 account.redeem=Account suspended contact admin to redeem!
-
-
+account.not.editable=You do not have access to update this account!
 
 
 
