--- a/DLTE-FinalProject/mybank-debitcard-web/src/main/resources/application.properties
+++ b/DLTE-FinalProject/mybank-debitcard-web/src/main/resources/application.properties
@@ -70,11 +70,17 @@ card.status.invalid = status must be String provided here (active|inactive|Activ
 #debitCard.already.active= Debit card is already active.
 #empty.body=Request body is empty.Please provide card details.
 
+
+#rest web service
 internal.error=internal error occurred
 activation.fail=Invalid card number or Debit card does not exist
 card.active=Debit card activation successful
 debitCard.already.active= Debit card is already active
 empty.body=Request body is empty.Please provide card details
+
+#debit.request.boby.error=Debit card does not exist or request body is empty
+#debit.active.invalid.number=Debit card is already active or debit card number is wrong
+
 #for security
 attempts.update=Attempts updated.
 status.changed=Status has been changed!
@@ -82,3 +88,4 @@ credentials.invalid=Invalid credentials and attempts taken.
 attempts.taken=Attempts are taken
 account.suspend=Max Attempts reached account is suspended
 account.redeem=Account suspended contact admin to redeem!
+account.not.editable=You do not have access to update this account!
