--- a/Technical/Spring-DAO/Spring-Console/src/main/resources/application.properties
+++ b/Technical/Spring-DAO/Spring-Console/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=Spring-Console
 
 spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=prasha
-spring.datasource.password=prasha02
-server.port=8084
+spring.datasource.username=First
+spring.datasource.password=First
+server.port=8088
 
 #enables the colors
 spring.output.ansi.enabled=always
