--- a/DLTE-FinalProject/mybank-debitcard-web/src/main/resources/application.properties
+++ b/DLTE-FinalProject/mybank-debitcard-web/src/main/resources/application.properties
@@ -89,3 +89,7 @@ attempts.taken=Attempts are taken
 account.suspend=Max Attempts reached account is suspended
 account.redeem=Account suspended contact admin to redeem!
 account.not.editable=You do not have access to update this account!
+
+
+
+error.message=Error message
