--- a/DLTE-FinalProject/mybank-debitcard-web/pom.xml
+++ b/DLTE-FinalProject/mybank-debitcard-web/pom.xml
@@ -122,7 +122,7 @@
                 <configuration>
                     <schemaDirectory>src/main/resources</schemaDirectory>
                     <schemaFiles>debitcard.xsd</schemaFiles>
-                    <outputDirectory>src/main/java</outputDirectory>
+                    <outputDirectory>target/generated-sources</outputDirectory>
                     <clearOutputDir>false</clearOutputDir>
                 </configuration>
             </plugin>
