--- a/DLTE-FinalProject/mybank-debitcard-web/src/main/resources/application.properties
+++ b/DLTE-FinalProject/mybank-debitcard-web/src/main/resources/application.properties
@@ -17,8 +17,8 @@ logging.pattern.console=%clr([%level]){blue} %clr(%d){red} %c %clr(%t){yellow} %
 logging.file.name=myBankAppProject.log
 logging.pattern.file=%clr(%d){red} %clr([%level]){green} %c %t %clr(%m%n){green}
 
-Debitcard.error=not available to retrive data.
-#card.fetch.success=Debit card details fetched successfully
+Debitcard.error=not available to retrive the data.
+
 
 #account
 account.id.null=Account Id must be valid
