--- a/DLTE-FinalProject/mybank-debitcard-web/src/main/resources/card.properties
+++ b/DLTE-FinalProject/mybank-debitcard-web/src/main/resources/card.properties
@@ -1,10 +1,3 @@
-spring.application.name=mybank-debitcard-web
-spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=project
-spring.datasource.password=project
-server.port=8083
-
 springdoc.api-docs.enabled=true
 
 #enbales the colors
@@ -35,7 +28,7 @@ customer.contact.invalid = customer contact must be 10 digit number
 customer.status.null=customer status should not be null
 customer.address.null= customer address should not be null
 user.name.null= username should not be null
-user.name.invalid = username must be a proper string 
+user.name.invalid = username must be a proper string
 password.null = password should not be null
 
 #Debit card
@@ -49,7 +42,7 @@ card.number.invalid = card number should be 16 Digits
 account.number.null = Account number shouldn't be Null
 account.number.invalid = Account number should be 14 Digits
 customer.id.null = Customer number shouldn't be Null
-customer.id.invalid = Customer number should be Digit 
+customer.id.invalid = Customer number should be Digit
 card.cvv=Invalid CVV number
 card.cvv.null=Debit card CVV shouldn't null
 card.expiry.invalid=Invalid Expiry date
@@ -62,13 +55,6 @@ card.pin.null =Debit Credit card pin shouldn't be Null
 card.pin.invalid = Debit Card pin should be  4 digit Number
 card.status.null=Debit card status must be provided
 card.status.invalid = status must be String provided here (active|inactive|Active|Inactive|ACTIVE|INACTIVE)
-
-#rest web service
-#card.active=Card activated successfully
-#activation.fail=Invalid card number or card does not exist
-#internal.error=internal error occurred
-#debitCard.already.active= Debit card is already active.
-#empty.body=Request body is empty.Please provide card details.
 
 
 #rest web service
@@ -83,8 +69,9 @@ empty.body=Request body is empty.Please provide card details
 attempts.update=Attempts updated.
 status.changed=Status has been changed!
 credentials.invalid=Invalid credentials and attempts taken.
-attempts.taken=Attempts are taken
+attempts.taken=Attempt left
 account.suspend=Max Attempts reached account is suspended
 account.redeem=Account suspended contact admin to redeem!
 account.not.editable=You do not have access to update this account!
 error.message=Error message
+incorrect.username=Username is incorrect,this account does not exist
