--- a/DLTE-FinalProject/mybank-debitcard-dao/src/main/resources/application.properties
+++ b/DLTE-FinalProject/mybank-debitcard-dao/src/main/resources/application.properties
@@ -80,7 +80,9 @@ account.redeem=Account suspended contact admin to redeem!
 account.not.editable=You do not have access to update this account!
 
 
-
+account.fetch.success = Account Details fetched successfully
+account.list.null = No Accounts available
+account.list = /account/list
 
 
 
