--- a/DLTE-FinalProject/mybank-debitcard-web/src/main/resources/card.properties
+++ b/DLTE-FinalProject/mybank-debitcard-web/src/main/resources/card.properties
@@ -75,3 +75,8 @@ account.redeem=Account suspended contact admin to redeem!
 account.not.editable=You do not have access to update this account!
 error.message=Error message
 incorrect.username=Username is incorrect,this account does not exist
+
+
+account.fetch.success = Account Details fetched successfully
+account.list.null = No Accounts available
+account.list = /account/list
